1998-12-17  James Henstridge  <james@daa.com.au>

	* examples/*/*.py: changed calls to GtkLabel.set to GtkLabel.set_text.
	
	* gtk.py: made changes to reflect those below.

	* generate/gtkbase.defs (gtk_widget_set_app_paintable): added this
	stub.

	* generate/gtkmisc.defs (gtk_label_set_text): renamed gtk_label_set to
	this, added gtk_label_set_line_wrap.

	* generate/gtkdnd.defs: Added gtk_drag_source_unset.

	* generate/gtklists.defs: moved reordering function stubs from ctree
	to clist.

	* generate/gtkcontainers.defs: removed GtkDrawWindow.  Added
	gtk_paned_pack[12]

	* GtkExtra.py (MenuFactory.create): wasn't passing extra arguments
	onto signal connect.  Bug fix from Sam Tannous <stannous@cisco.com>

	* gtkmodule.c: Applied some fixes to the ctree code from
	A.Hartgers@phys.tue.nl

1998-12-09  James Henstridge  <james@daa.com.au>

	* gtk.py, generate/gtkmisc.defs, GTK.py: Added
	gtk_toolbar_set_space_style and the required enum.

1998-12-08  James Henstridge  <james@daa.com.au>

	* gtkmodule.c: fixed up the toolbar functions, so they also use
	gtk_signal_connect_full, and now return the added child, like
	the C functions do.

	* examples/testgtk/testgtk.py: fixed up some stuff in the main
	function and clist test.

	* gtk.py, generate/gtkcontainers.defs: added
	gtk_window_set_transient_for and gtk_window_set_default_size.

	* gtkmodule.c: Changed to use _full functions instead of _interp
	functions.  Also made gtk_signal_connect and friends use the
	gtk_signal_connect_full function rather than the default marshaller
	method.

1998-12-07  James Henstridge  <james@daa.com.au>

	* generate/gtkcontainers.defs (gtk_viewport_new): Accept NULL
	arguments for adjustments of a viewport.  This is the correct
	fix for Michael's other patch.

	* examples/*/*.py: got rid of deprecation messages.  Put scrolled
	windows round all clists.
	
	* pyglade/build.py: Fixes a bug in scrolledwindow_new pointed out
	by Michael Hudson.  Also made some changes so that it doesn't use