@@ -729,12 +729,13 @@
    (int destx) (int desty)
    (int width) (int height)))
 
-(define-func gtk_preview_draw_row
-  none
-  ((GtkPreview preview)
-   (string data)
-   (int x) (int y)
-   (int width)))
+; string is allowed to have nuls in it, but normal 's' conversion doesn't
+;(define-func gtk_preview_draw_row
+;  none
+;  ((GtkPreview preview)
+;   (string data)
+;   (int x) (int y)
+;   (int width)))
 
 (define-func gtk_preview_set_expand
   none
