@@ -1,3 +1,9 @@
+1998-12-20  James Henstridge  <james@daa.com.au>
+
+	* gtkmodule.c, generate/gtkmisc.defs: moved gtk_preview_draw_row here
+	because python's string conversion routines do not like nuls in a
+	string, but you quite often want them in image data.
+
 1998-12-17  James Henstridge  <james@daa.com.au>
 
 	* examples/*/*.py: changed calls to GtkLabel.set to GtkLabel.set_text.
